#20210630 - Remove Warnings.